--- a/html-css/module_05/index.html
+++ b/html-css/module_05/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <title>Модуль 5</title>
     <link rel="stylesheet" href="style/main.css">
+    <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <header class="container">   
+    <header class="container">  
         <nav class="nav_bar">
             <a href="https://www.google.com/search?q=mart&oq" target="_blank" class="logo">ART</a>     
             <ul class="menu clearfix">
@@ -31,21 +32,134 @@
             </ul>
         </nav>
     </header>
-    <section>
-        <article class="slider">
-            <nav class="btn_nav container">
-                <button class="btn btn_prev"><</button>
-                <button class="btn btn_next">></button>
-            </nav>
+    <main>
+        <section>
+            <article class="slider">
+                <nav class="btn_nav container">
+                    <button class="btn btn_prev"><i class="fa fa-angle-left" aria-hidden="true"></i></button>
+                    <button class="btn btn_next"><i class="fa fa-angle-right" aria-hidden="true"></i></button>
+                </nav>
 
-            <ul class="slides">
-                <li class="slides_items">
-                    <img src="img/slider/1.jpg" alt="1">
-                    <h2 class="slides_name">AFFORDABLE PARIS TOURS</h2>
-                    <p class="slides_text">CITY TOURS / TOUR TICKETS / TOUR GUIDES</p>
+                <ul class="slides">
+                    <li class="slides_items">
+                        <img class="slides_img" src="img/slider/1.jpg" alt="1">
+                        <div class="slides-txt">
+                            <h2 class="slides_name">AFFORDABLE PARIS TOURS</h2>
+                            <p class="slides_text">CITY TOURS / TOUR TICKETS / TOUR GUIDES</p>
+                        </div>
+                    </li>
+                </ul>
+            </article>
+        </section>
+        <section class="container">
+            <h2 class="headline">NEW COLLECTION</h2>
+            <ul class="card_main">
+                <li>
+                    <article class="card">
+                        <div class="card_modal">
+                            <ul class="card_modal_list">
+                                <li>
+                                    <a class="modal_item" href="#" target="_blank"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                                </li>
+                                <li>
+                                    <a class="modal_item" href="#" target="_blank"><i class="fa fa-random" aria-hidden="true"></i></a>
+                                </li>
+                                <li>
+                                    <a class="modal_item" href="#" target="_blank"><i class="fa fa-clock-o" aria-hidden="true"></i></i></a>
+                                </li>
+                                <li>
+                                    <a class="modal_item last_item" href="#" target="_blank"><i class="fa fa-shopping-cart" aria-hidden="true"></i>ADD TO CART</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <img class="card_img" src="img/card/1.jpg" alt="">
+                        <div class="card_text_wapper">
+                            <p class="card_font card_name">Blue Shirt</p>
+                            <p class="card_font card_cost">$26</p>
+                        </div>
+                    </article>
+                </li>
+                <li>
+                    <article class="card">
+                        <div class="card_modal">
+                            <ul class="card_modal_list">
+                                <li>
+                                    <a class="modal_item" href="#" target="_blank"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                                </li>
+                                <li>
+                                    <a class="modal_item" href="#" target="_blank"><i class="fa fa-random" aria-hidden="true"></i></a>
+                                </li>
+                                <li>
+                                    <a class="modal_item" href="#" target="_blank"><i class="fa fa-clock-o" aria-hidden="true"></i></i></a>
+                                </li>
+                                <li>
+                                    <a class="modal_item last_item" href="#" target="_blank"><i class="fa fa-shopping-cart" aria-hidden="true"></i> ADD TO CART</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <img class="card_img" src="img/card/2.jpg" alt="">
+                        <div class="card_text_wapper">
+                            <p class="card_font card_name">Blue Shirt</p>
+                            <p class="card_font card_cost">$26</p>
+                        </div>
+                    </article>
+                </li>
+                <li>
+                    <article class="card">
+                        <div class="card_modal">
+                            <ul class="card_modal_list">
+                                <li>
+                                    <a class="modal_item" href="#" target="_blank"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                                </li>
+                                <li>
+                                    <a class="modal_item" href="#" target="_blank"><i class="fa fa-random" aria-hidden="true"></i></a>
+                                </li>
+                                <li>
+                                    <a class="modal_item" href="#" target="_blank"><i class="fa fa-clock-o" aria-hidden="true"></i></i></a>
+                                </li>
+                                <li>
+                                    <a class="modal_item last_item" href="#" target="_blank"><i class="fa fa-shopping-cart" aria-hidden="true"></i> ADD TO CART</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <img class="card_img" src="img/card/3.jpg" alt="">
+                        <div class="card_text_wapper">
+                            <p class="card_font card_name">Blue Shirt</p>
+                            <p class="card_font card_cost">$26</p>
+                        </div>
+                    </article>
+                </li>
+                <li>
+                    <article class="card">
+                        <div class="card_modal">
+                            <ul class="card_modal_list">
+                                <li>
+                                    <a class="modal_item" href="#" target="_blank"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                                </li>
+                                <li>
+                                    <a class="modal_item" href="#" target="_blank"><i class="fa fa-random" aria-hidden="true"></i></a>
+                                </li>
+                                <li>
+                                    <a class="modal_item" href="#" target="_blank"><i class="fa fa-clock-o" aria-hidden="true"></i></i></a>
+                                </li>
+                                <li>
+                                    <a class="modal_item last_item" href="#" target="_blank"><i class="fa fa-shopping-cart" aria-hidden="true"></i> ADD TO CART</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <img class="card_img" src="img/card/4.jpg" alt="">
+                        <div class="card_text_wapper">
+                            <p class="card_font card_name">Blue Shirt</p>
+                            <p class="card_font card_cost">$26</p>
+                        </div>
+                    </article>
                 </li>
             </ul>
-        </article>
-    </section>
+        </section>
+    </main>
+    <footer class="foot">
+        <p class="foot_text">All Rights Reserved © Dokan | Designed</p>
+        <a class="foot_link" href="#" target="_blank"> ThemenGraph</a>      
+    </footer>
 </body>
 </html>
