--- a/html-css/module_05/index.html
+++ b/html-css/module_05/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <header class="container">  
-        <nav class="nav_bar">
+    <header>  
+        <nav class="nav_bar container">
             <a href="https://www.google.com/search?q=mart&oq" target="_blank" class="logo">ART</a>     
             <ul class="menu clearfix">
                 <li>
@@ -68,7 +68,9 @@
                                     <a class="modal_item" href="#" target="_blank"><i class="fa fa-clock-o" aria-hidden="true"></i></i></a>
                                 </li>
                                 <li>
-                                    <a class="modal_item last_item" href="#" target="_blank"><i class="fa fa-shopping-cart" aria-hidden="true"></i>ADD TO CART</a>
+                                    <a class="modal_item last_item" href="#" target="_blank"><i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                                        <p class="last_item_p">ADD TO CART</p>
+                                    </a>
                                 </li>
                             </ul>
                         </div>
@@ -93,7 +95,9 @@
                                     <a class="modal_item" href="#" target="_blank"><i class="fa fa-clock-o" aria-hidden="true"></i></i></a>
                                 </li>
                                 <li>
-                                    <a class="modal_item last_item" href="#" target="_blank"><i class="fa fa-shopping-cart" aria-hidden="true"></i> ADD TO CART</a>
+                                    <a class="modal_item last_item" href="#" target="_blank"><i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                                        <p class="last_item_p">ADD TO CART</p>
+                                    </a>
                                 </li>
                             </ul>
                         </div>
@@ -118,7 +122,9 @@
                                     <a class="modal_item" href="#" target="_blank"><i class="fa fa-clock-o" aria-hidden="true"></i></i></a>
                                 </li>
                                 <li>
-                                    <a class="modal_item last_item" href="#" target="_blank"><i class="fa fa-shopping-cart" aria-hidden="true"></i> ADD TO CART</a>
+                                    <a class="modal_item last_item" href="#" target="_blank"><i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                                        <p class="last_item_p">ADD TO CART</p>
+                                    </a>
                                 </li>
                             </ul>
                         </div>
@@ -143,7 +149,9 @@
                                     <a class="modal_item" href="#" target="_blank"><i class="fa fa-clock-o" aria-hidden="true"></i></i></a>
                                 </li>
                                 <li>
-                                    <a class="modal_item last_item" href="#" target="_blank"><i class="fa fa-shopping-cart" aria-hidden="true"></i> ADD TO CART</a>
+                                    <a class="modal_item last_item" href="#" target="_blank"><i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                                        <p class="last_item_p">ADD TO CART</p>
+                                    </a>
                                 </li>
                             </ul>
                         </div>
