--- a/html-css/module_05/index.html
+++ b/html-css/module_05/index.html
@@ -65,7 +65,7 @@
                                     <a class="modal_item" href="#" target="_blank"><i class="fa fa-random" aria-hidden="true"></i></a>
                                 </li>
                                 <li>
-                                    <a class="modal_item" href="#" target="_blank"><i class="fa fa-clock-o" aria-hidden="true"></i></i></a>
+                                    <a class="modal_item" href="#" target="_blank"><i class="fa fa-clock-o" aria-hidden="true"></i></a>
                                 </li>
                                 <li>
                                     <a class="modal_item last_item" href="#" target="_blank"><i class="fa fa-shopping-cart" aria-hidden="true"></i>
@@ -92,7 +92,7 @@
                                     <a class="modal_item" href="#" target="_blank"><i class="fa fa-random" aria-hidden="true"></i></a>
                                 </li>
                                 <li>
-                                    <a class="modal_item" href="#" target="_blank"><i class="fa fa-clock-o" aria-hidden="true"></i></i></a>
+                                    <a class="modal_item" href="#" target="_blank"><i class="fa fa-clock-o" aria-hidden="true"></i></a>
                                 </li>
                                 <li>
                                     <a class="modal_item last_item" href="#" target="_blank"><i class="fa fa-shopping-cart" aria-hidden="true"></i>
@@ -119,7 +119,7 @@
                                     <a class="modal_item" href="#" target="_blank"><i class="fa fa-random" aria-hidden="true"></i></a>
                                 </li>
                                 <li>
-                                    <a class="modal_item" href="#" target="_blank"><i class="fa fa-clock-o" aria-hidden="true"></i></i></a>
+                                    <a class="modal_item" href="#" target="_blank"><i class="fa fa-clock-o" aria-hidden="true"></i></a>
                                 </li>
                                 <li>
                                     <a class="modal_item last_item" href="#" target="_blank"><i class="fa fa-shopping-cart" aria-hidden="true"></i>
@@ -146,7 +146,7 @@
                                     <a class="modal_item" href="#" target="_blank"><i class="fa fa-random" aria-hidden="true"></i></a>
                                 </li>
                                 <li>
-                                    <a class="modal_item" href="#" target="_blank"><i class="fa fa-clock-o" aria-hidden="true"></i></i></a>
+                                    <a class="modal_item" href="#" target="_blank"><i class="fa fa-clock-o" aria-hidden="true"></i></a>
                                 </li>
                                 <li>
                                     <a class="modal_item last_item" href="#" target="_blank"><i class="fa fa-shopping-cart" aria-hidden="true"></i>
