--- a/html-css/module_03/index.html
+++ b/html-css/module_03/index.html
@@ -10,16 +10,16 @@
 		<nav class="nav_bar">
 			<ul class="menu">
 				<li>
-					<a href="#" class="section__menu">Lifestyle</a>
+					<a href="#" class="section_menu">Lifestyle</a>
 				</li>
 				<li>
-					<a href="#" class="section__menu">Photodiary</a>
+					<a href="#" class="section_menu">Photodiary</a>
 				</li>
 				<li>
-					<a href="#" class="section__menu">Music</a>
+					<a href="#" class="section_menu">Music</a>
 				</li>
 				<li>
-					<a href="#" class="section__menu">Travel</a>
+					<a href="#" class="section_menu">Travel</a>
 				</li>
 			</ul>
 		</nav>
