module 6 addtask commit

--- a/html-css/modul_06_add_task/index.html
+++ b/html-css/modul_06_add_task/index.html
@@ -3,8 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <title>Модуль 6 дополнительные задания</title>
+    <link rel="stylesheet" href="./style/main.css">
 </head>
 <body>
-    
+    <section class="container">
+        <div class="social_card_list container">
+            <div class="social_card_item">
+                <img src="./img/j_card/photo.png" alt="photo" class="social_card_img">
+                <h2 class="social_card_name">Jubar Maki</h2>
+                <p class="social_card_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, iure. Excepturi sapiente ipsum exercitationem, vero ut quo enim dolorem eos.</p>
+                <button class="btn_like">Like</button>
+            </div>
+            <div class="social_card_item">
+                <img src="./img/j_card/photo.png" alt="photo" class="social_card_img">
+                <h2 class="social_card_name">Jubar Maki</h2>
+                <p class="social_card_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, iure. Excepturi sapiente ipsum exercitationem, vero ut quo enim dolorem eos.</p>
+                <button class="btn_like">Like</button>
+            </div>
+            <div class="social_card_item">
+                <img src="./img/j_card/photo.png" alt="photo" class="social_card_img">
+                <h2 class="social_card_name">Jubar Maki</h2>
+                <p class="social_card_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, iure. Excepturi sapiente ipsum exercitationem, vero ut quo enim dolorem eos.</p>
+                <button class="btn_like">Like</button>
+            </div>
+            <div class="social_card_item">
+                <img src="./img/j_card/photo.png" alt="photo" class="social_card_img">
+                <h2 class="social_card_name">Jubar Maki</h2>
+                <p class="social_card_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, iure. Excepturi sapiente ipsum exercitationem, vero ut quo enim dolorem eos.</p>
+                <button class="btn_like">Like</button>
+            </div>
+            <div class="social_card_item">
+                <img src="./img/j_card/photo.png" alt="photo" class="social_card_img">
+                <h2 class="social_card_name">Jubar Maki</h2>
+                <p class="social_card_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, iure. Excepturi sapiente ipsum exercitationem, vero ut quo enim dolorem eos.</p>
+                <button class="btn_like">Like</button>
+            </div>
+            <div class="social_card_item">
+                <img src="./img/j_card/photo.png" alt="photo" class="social_card_img">
+                <h2 class="social_card_name">Jubar Maki</h2>
+                <p class="social_card_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, iure. Excepturi sapiente ipsum exercitationem, vero ut quo enim dolorem eos.</p>
+                <button class="btn_like">Like</button>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
