--- a/html-css/module_05_add_task/index.html
+++ b/html-css/module_05_add_task/index.html
@@ -49,6 +49,11 @@
                 <div class="box">Child-9</div>
             </div>
         </section>
+        <section>
+            <div class="div_flex">
+                Hello <div>world</div><br>!
+            </div>
+        </section>
     </main>
 </body>
 <script>
