--- a/html-css/module_06/index.html
+++ b/html-css/module_06/index.html
@@ -36,53 +36,65 @@
                 <h2 class="headline_second">Amazing Services</h2>
             </div>
             <ul class="card_list">
-                <li class="card_item">
-                    <img src="./img/card/1.png" alt="1.jpg" class="card_img">
-                    <div class="card_container">
-                        <h4 class="card_title">photograhy</h4>
-                        <p class="card_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                            Quod quia perferendis voluptatem!</p>
-                    </div>
+                <li>
+                    <article class="card_item">
+                        <img src="./img/card/1.png" alt="1.jpg" class="card_img">
+                        <div class="card_container">
+                            <h4 class="card_title">photograhy</h4>
+                            <p class="card_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                                Quod quia perferendis voluptatem!</p>
+                        </div>
+                    </article>
                 </li>
-                <li class="card_item">
-                    <img src="./img/card/2.png" alt="2.jpg" class="card_img">
-                    <div class="card_container">
-                        <h4 class="card_title">web disign</h4>
-                        <p class="card_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                            Quod quia perferendis voluptatem!</p>
-                    </div>
+                <li>
+                    <article class="card_item">
+                        <img src="./img/card/2.png" alt="2.jpg" class="card_img">
+                        <div class="card_container">
+                            <h4 class="card_title">web disign</h4>
+                            <p class="card_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                                Quod quia perferendis voluptatem!</p>
+                        </div>
+                    </article>
                 </li>
-                <li class="card_item">
-                    <img src="./img/card/3.png" alt="3.jpg" class="card_img">
-                    <div class="card_container">
-                        <h4 class="card_title">creativity</h4>
-                        <p class="card_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                            Quod quia perferendis voluptatem!</p>
-                    </div>
+                <li>
+                    <article class="card_item">
+                        <img src="./img/card/3.png" alt="3.jpg" class="card_img">
+                        <div class="card_container">
+                            <h4 class="card_title">creativity</h4>
+                            <p class="card_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                                Quod quia perferendis voluptatem!</p>
+                        </div>
+                    </article>
                 </li>
-                <li class="card_item">
-                    <img src="./img/card/4.png" alt="4.jpg" class="card_img">
-                    <div class="card_container">
-                        <h4 class="card_title">seo</h4>
-                        <p class="card_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                            Quod quia perferendis voluptatem!</p>
-                    </div>
+                <li>
+                    <article class="card_item">
+                        <img src="./img/card/4.png" alt="4.jpg" class="card_img">
+                        <div class="card_container">
+                            <h4 class="card_title">seo</h4>
+                            <p class="card_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                                Quod quia perferendis voluptatem!</p>
+                        </div>
+                    </article>
                 </li>
-                <li class="card_item">
-                    <img src="./img/card/5.png" alt="5.jpg" class="card_img">
-                    <div class="card_container">
-                        <h4 class="card_title">css/html</h4>
-                        <p class="card_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                            Quod quia perferendis voluptatem!</p>
-                    </div>
+                <li>
+                    <article class="card_item">
+                        <img src="./img/card/5.png" alt="5.jpg" class="card_img">
+                        <div class="card_container">
+                            <h4 class="card_title">css/html</h4>
+                            <p class="card_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                                Quod quia perferendis voluptatem!</p>
+                        </div>
+                    </article>
                 </li>
-                <li class="card_item">
-                    <img src="./img/card/6.png" alt="6.jpg" class="card_img">
-                    <div class="card_container">
-                        <h4 class="card_title">digital</h4>
-                        <p class="card_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                            Quod quia perferendis voluptatem!</p>
-                    </div>
+                <li>
+                    <article class="card_item">
+                        <img src="./img/card/6.png" alt="6.jpg" class="card_img">
+                        <div class="card_container">
+                            <h4 class="card_title">digital</h4>
+                            <p class="card_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                                Quod quia perferendis voluptatem!</p>
+                        </div>
+                    </article>
                 </li>
             </ul>
         </section>
@@ -95,7 +107,7 @@
                 ratione pariatur?</p>
             </div>
         </section>
-        <section>
+        <section class="container">
             <ul class="team_list">
                 <li>
                     <article class="team_items">
