--- a/html-css/module_04/index.html
+++ b/html-css/module_04/index.html
@@ -8,7 +8,7 @@
 <body>
     <header class="container">   
         <nav class="nav_bar">
-            <a href="https://www.google.com/search?q=mart&oq" target="_blank" class="logo">ART</a>     
+            <a href="https://www.google.com/search?q=mart&oq" target="_blank" class="logo">MART</a>     
             <ul class="menu clearfix">
                 <li>
                     <a href="#" target="_blank" class="section_menu">Home</a>
@@ -33,103 +33,107 @@
     </header>
     <main class="container">
         <section class="featured_products">
-            <h2 class="headline">Featured products</h2>
-            <ul class="featured_list clearfix">    
-                <li>
-                    <article class="featured_item">
-                        <img src="img/Featured/1.png" alt="1.png">
-                        <a href="#" target="_blank" class="slide_text">Blue tshirt</a>
-                        <p class="slide_cost">$26</p>
-                    </article>
-                </li>
-                <li>
-                    <article class="featured_item">
-                        <img src="img/Featured/2.png" alt="2.png">
-                        <a href="#" target="_blank" class="slide_text">Woman shirt</a>
-                        <p class="slide_cost">$31</p>
-                    </article>
-                </li>
-                <li>
-                    <article class="featured_item">
-                        <img src="img/Featured/3.png" alt="3.png">
-                        <a href="#" target="_blank" class="slide_text">Yellow tshirt</a>
-                        <p class="slide_cost">$21</p>
-                    </article>
-                </li>
-                <li>
-                    <article class="featured_item">
-                        <img src="img/Featured/4.png" alt="4.png">
-                        <a href="#" target="_blank" class="slide_text">Cool lingerie</a>
-                        <p class="slide_cost">$56</p>
-                    </article>
-                </li>
-                <li>
-                    <article class="featured_item">
-                        <img src="img/Featured/5.png" alt="5.png">
-                        <a href="#" target="_blank" class="slide_text">Blue tshirt</a>
-                        <p class="slide_cost">$26</p>
-                    </article>
-                </li>
-                <li>
-                    <article class="featured_item">
-                        <img src="img/Featured/6.png" alt="6.png">
-                        <a href="#" target="_blank" class="slide_text">Woman shirt</a>
-                        <p class="slide_cost">$31</p>
-                    </article>
-                </li>
-                <li>
-                    <article class="featured_item">
-                        <img src="img/Featured/7.png" alt="7.png">
-                        <a href="#" target="_blank" class="slide_text">Yellow tshirt</a>
-                        <p class="slide_cost">$21</p>
-                    </article>
-                </li>
-                <li>
-                    <article class="featured_item">
-                        <img src="img/Featured/8.png" alt="8.png">
-                        <a href="#" target="_blank" class="slide_text">Cool lingerie</a>
-                        <p class="slide_cost">$56</p>
-                    </article>
-                </li>
-            </ul>
+            <header>
+                <h2 class="headline">Featured products</h2>
+            </header>
+            <main>
+                <ul class="featured_list clearfix">    
+                    <li>
+                        <article class="featured_item">
+                            <img src="img/Featured/1.png" alt="1.png" width="255" height="282">
+                            <p class="slide_text">Blue tshirt</p>                          <p class="slide_cost">$26</p>
+                        </article>
+                    </li>
+                    <li>
+                        <article class="featured_item">
+                            <img src="img/Featured/2.png" alt="2.png" width="255" height="282">
+                            <p class="slide_text">Woman shirt</p>                           <p class="slide_cost">$31</p>
+                        </article>
+                    </li>
+                    <li>
+                        <article class="featured_item">
+                            <img src="img/Featured/3.png" alt="3.png" width="255" height="282">
+                            <p class="slide_text">Yellow tshirt</p>
+                            <p class="slide_cost">$21</p>
+                        </article>
+                    </li>
+                    <li>
+                        <article class="featured_item">
+                            <img src="img/Featured/4.png" alt="4.png" width="255" height="282">
+                            <p class="slide_text">Cool lingerie</p>
+                            <p class="slide_cost">$56</p>
+                        </article>
+                    </li>
+                    <li>
+                        <article class="featured_item">
+                            <img src="img/Featured/5.png" alt="5.png" width="255" height="282">
+                            <p class="slide_text">Blue tshirt</p>                           <p class="slide_cost">$26</p>
+                        </article>
+                    </li>
+                    <li>
+                        <article class="featured_item">
+                            <img src="img/Featured/6.png" alt="6.png" width="255" height="282">
+                            <p class="slide_text">Woman shirt</p>                           <p class="slide_cost">$31</p>
+                        </article>
+                    </li>
+                    <li>
+                        <article class="featured_item">
+                            <img src="img/Featured/7.png" alt="7.png" width="255" height="282">
+                            <p class="slide_text">Yellow tshirt</p>
+                            <p class="slide_cost">$21</p>
+                        </article>
+                    </li>
+                    <li>
+                        <article class="featured_item">
+                            <img src="img/Featured/8.png" alt="8.png" width="255" height="282">
+                            <p class="slide_text">Cool lingerie</p>
+                            <p class="slide_cost">$56</p>
+                        </article>
+                    </li>
+                </ul>
+            </main>
         </section>
-        <section class="news container">
-            <h2 class="headline">LATEST NEWS</h2>
-            <ul class="news_list clearfix">
-                <li>
-                    <article class="news_items">
-                        <img src="img/News/Ln-1.png" alt="Ln-1.png">
-                        <h3 class="news_title">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
-                        <p class="news_text">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh 
-                            vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. 
-                            Nam nec tellus a odio tincidunt auctor a ornare 
-                        </p>
-                        <button class="btn" onclick="window.scrollTo(0, 0);">Read more</button>
-                    </article>
-                </li>
-                <li>
-                    <article class="news_items">
-                        <img src="img/News/ln-2.png" alt="Ln-2.png">
-                        <h3 class="news_title">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
-                        <p class="news_text">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh 
-                            vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. 
-                            Nam nec tellus a odio tincidunt auctor a ornare 
-                        </p>
-                        <button class="btn" onclick="window.scrollTo(0, 0);">Read more</button>
-                    </article>
-                </li>
-                <li>
-                    <article class="news_items">
-                        <img src="img/News/ln-3.png" alt="ln-3.jpg">
-                        <h3 class="news_title">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
-                        <p class="news_text">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh 
-                            vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. 
-                            Nam nec tellus a odio tincidunt auctor a ornare 
-                        </p>
-                        <button class="btn" onclick="window.scrollTo(0, 0);">Read more</button>
-                    </article>
-                </li>
-            </ul>
+        <section class="lastes_news">
+            <header>
+                <h2 class="headline">LATEST NEWS</h2>
+            </header>
+            <main>
+                <ul class="news_list clearfix">
+                    <li>
+                        <article class="news_items">
+                            <img src="img/News/Ln-1.png" alt="Ln-1.png" width="347" height="261">
+                            <h3 class="news_title">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
+                            <p class="news_text">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh 
+                                vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. 
+                                Nam nec tellus a odio tincidunt auctor a ornare 
+                            </p>
+                            <a class="btn" href="#" target="_blank">Read more</a>
+                        </article>
+                    </li>
+                    <li>
+                        <article class="news_items">
+                            <img src="img/News/ln-2.png" alt="Ln-2.png" width="347" height="261">
+                            <h3 class="news_title">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
+                            <p class="news_text">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh 
+                                vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. 
+                                Nam nec tellus a odio tincidunt auctor a ornare 
+                            </p>
+                            <a class="btn" href="#" target="_blank">Read more</a>
+                        </article>
+                    </li>
+                    <li>
+                        <article class="news_items">
+                            <img src="img/News/ln-3.png" alt="ln-3.jpg" width="347" height="261">
+                            <h3 class="news_title">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
+                            <p class="news_text">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh 
+                                vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. 
+                                Nam nec tellus a odio tincidunt auctor a ornare 
+                            </p>
+                            <a class="btn" href="#" target="_blank">Read more</a>
+                        </article>
+                    </li>
+                </ul>
+            </main>
         </section>
     </main>
 </body>
