--- a/html-css/module_05/index.html
+++ b/html-css/module_05/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>  
         <nav class="nav_bar container">
-            <a href="https://www.google.com/search?q=mart&oq" target="_blank" class="logo">ART</a>     
+            <a href="https://www.google.com/search?q=mart&oq" target="_blank" class="logo">MART</a>     
             <ul class="menu clearfix">
                 <li>
                     <a href="#" target="_blank" class="section_menu">Home</a>
@@ -33,25 +33,23 @@
         </nav>
     </header>
     <main>
-        <section>
-            <article class="slider">
-                <nav class="btn_nav container">
-                    <button class="btn btn_prev"><i class="fa fa-angle-left" aria-hidden="true"></i></button>
-                    <button class="btn btn_next"><i class="fa fa-angle-right" aria-hidden="true"></i></button>
-                </nav>
+        <div class="slider">
+            <div class="btn_nav container">
+                <button class="btn btn_prev"><i class="fa fa-angle-left" aria-hidden="true"></i></button>
+                <button class="btn btn_next"><i class="fa fa-angle-right" aria-hidden="true"></i></button>
+            </div>
 
-                <ul class="slides">
-                    <li class="slides_items">
-                        <img class="slides_img" src="img/slider/1.jpg" alt="1">
-                        <div class="slides-txt">
-                            <h2 class="slides_name">AFFORDABLE PARIS TOURS</h2>
-                            <p class="slides_text">CITY TOURS / TOUR TICKETS / TOUR GUIDES</p>
-                        </div>
-                    </li>
-                </ul>
-            </article>
-        </section>
-        <section class="container">
+            <ul class="slides">
+                <li class="slides_items">
+                    <img class="slides_img" src="img/slider/1.jpg" alt="1">
+                    <div class="slides_txt_wrapper">
+                        <h2 class="slides_name">AFFORDABLE PARIS TOURS</h2>
+                        <p class="slides_text">CITY TOURS / TOUR TICKETS / TOUR GUIDES</p>
+                    </div>
+                </li>
+            </ul>
+        </div>
+        <section class="new_colection container">
             <h2 class="headline">NEW COLLECTION</h2>
             <ul class="card_main">
                 <li>
@@ -59,18 +57,25 @@
                         <div class="card_modal">
                             <ul class="card_modal_list">
                                 <li>
-                                    <a class="modal_item" href="#" target="_blank"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                                    <button class="modal_item">
+                                        <i class="fa fa-heart-o" aria-hidden="true"></i>
+                                    </button>
                                 </li>
                                 <li>
-                                    <a class="modal_item" href="#" target="_blank"><i class="fa fa-random" aria-hidden="true"></i></a>
+                                    <button class="modal_item">
+                                        <i class="fa fa-random" aria-hidden="true"></i>
+                                    </button>
                                 </li>
                                 <li>
-                                    <a class="modal_item" href="#" target="_blank"><i class="fa fa-clock-o" aria-hidden="true"></i></a>
+                                    <button class="modal_item">
+                                        <i class="fa fa-clock-o" aria-hidden="true"></i>
+                                    </button>
                                 </li>
                                 <li>
-                                    <a class="modal_item last_item" href="#" target="_blank"><i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                                    <button class="modal_item last_item">
+                                        <i class="fa fa-shopping-cart" aria-hidden="true"></i>
                                         <p class="last_item_p">ADD TO CART</p>
-                                    </a>
+                                    </button>
                                 </li>
                             </ul>
                         </div>
@@ -86,19 +91,26 @@
                         <div class="card_modal">
                             <ul class="card_modal_list">
                                 <li>
-                                    <a class="modal_item" href="#" target="_blank"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
-                                </li>
-                                <li>
-                                    <a class="modal_item" href="#" target="_blank"><i class="fa fa-random" aria-hidden="true"></i></a>
-                                </li>
-                                <li>
-                                    <a class="modal_item" href="#" target="_blank"><i class="fa fa-clock-o" aria-hidden="true"></i></a>
-                                </li>
-                                <li>
-                                    <a class="modal_item last_item" href="#" target="_blank"><i class="fa fa-shopping-cart" aria-hidden="true"></i>
-                                        <p class="last_item_p">ADD TO CART</p>
-                                    </a>
-                                </li>
+                                        <button class="modal_item">
+                                            <i class="fa fa-heart-o" aria-hidden="true"></i>
+                                        </button>
+                                    </li>
+                                    <li>
+                                        <button class="modal_item">
+                                            <i class="fa fa-random" aria-hidden="true"></i>
+                                        </button>
+                                    </li>
+                                    <li>
+                                        <button class="modal_item">
+                                            <i class="fa fa-clock-o" aria-hidden="true"></i>
+                                        </button>
+                                    </li>
+                                    <li>
+                                        <button class="modal_item last_item">
+                                            <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                                            <p class="last_item_p">ADD TO CART</p>
+                                        </button>
+                                    </li>
                             </ul>
                         </div>
                         <img class="card_img" src="img/card/2.jpg" alt="">
@@ -113,19 +125,26 @@
                         <div class="card_modal">
                             <ul class="card_modal_list">
                                 <li>
-                                    <a class="modal_item" href="#" target="_blank"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
-                                </li>
-                                <li>
-                                    <a class="modal_item" href="#" target="_blank"><i class="fa fa-random" aria-hidden="true"></i></a>
-                                </li>
-                                <li>
-                                    <a class="modal_item" href="#" target="_blank"><i class="fa fa-clock-o" aria-hidden="true"></i></a>
-                                </li>
-                                <li>
-                                    <a class="modal_item last_item" href="#" target="_blank"><i class="fa fa-shopping-cart" aria-hidden="true"></i>
-                                        <p class="last_item_p">ADD TO CART</p>
-                                    </a>
-                                </li>
+                                        <button class="modal_item">
+                                            <i class="fa fa-heart-o" aria-hidden="true"></i>
+                                        </button>
+                                    </li>
+                                    <li>
+                                        <button class="modal_item">
+                                            <i class="fa fa-random" aria-hidden="true"></i>
+                                        </button>
+                                    </li>
+                                    <li>
+                                        <button class="modal_item">
+                                            <i class="fa fa-clock-o" aria-hidden="true"></i>
+                                        </button>
+                                    </li>
+                                    <li>
+                                        <button class="modal_item last_item">
+                                            <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                                            <p class="last_item_p">ADD TO CART</p>
+                                        </button>
+                                    </li>
                             </ul>
                         </div>
                         <img class="card_img" src="img/card/3.jpg" alt="">
@@ -140,19 +159,26 @@
                         <div class="card_modal">
                             <ul class="card_modal_list">
                                 <li>
-                                    <a class="modal_item" href="#" target="_blank"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
-                                </li>
-                                <li>
-                                    <a class="modal_item" href="#" target="_blank"><i class="fa fa-random" aria-hidden="true"></i></a>
-                                </li>
-                                <li>
-                                    <a class="modal_item" href="#" target="_blank"><i class="fa fa-clock-o" aria-hidden="true"></i></a>
-                                </li>
-                                <li>
-                                    <a class="modal_item last_item" href="#" target="_blank"><i class="fa fa-shopping-cart" aria-hidden="true"></i>
-                                        <p class="last_item_p">ADD TO CART</p>
-                                    </a>
-                                </li>
+                                        <button class="modal_item">
+                                            <i class="fa fa-heart-o" aria-hidden="true"></i>
+                                        </button>
+                                    </li>
+                                    <li>
+                                        <button class="modal_item">
+                                            <i class="fa fa-random" aria-hidden="true"></i>
+                                        </button>
+                                    </li>
+                                    <li>
+                                        <button class="modal_item">
+                                            <i class="fa fa-clock-o" aria-hidden="true"></i>
+                                        </button>
+                                    </li>
+                                    <li>
+                                        <button class="modal_item last_item">
+                                            <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                                            <p class="last_item_p">ADD TO CART</p>
+                                        </button>
+                                    </li>
                             </ul>
                         </div>
                         <img class="card_img" src="img/card/4.jpg" alt="">
