--- a/html-css/module_04/index.html
+++ b/html-css/module_04/index.html
@@ -31,12 +31,10 @@
             </ul>
         </nav>
     </header>
-    <main class="container">
-        <section class="featured_products">
-            <header>
+    <main>
+        <div class="container">
+            <section class="featured_products">
                 <h2 class="headline">Featured products</h2>
-            </header>
-            <main>
                 <ul class="featured_list clearfix">    
                     <li>
                         <article class="featured_item">
@@ -91,13 +89,9 @@
                         </article>
                     </li>
                 </ul>
-            </main>
-        </section>
-        <section class="lastes_news">
-            <header>
+            </section>
+            <section class="lastes_news">
                 <h2 class="headline">LATEST NEWS</h2>
-            </header>
-            <main>
                 <ul class="news_list clearfix">
                     <li>
                         <article class="news_items">
@@ -133,8 +127,8 @@
                         </article>
                     </li>
                 </ul>
-            </main>
-        </section>
+            </section>
+        </div>
     </main>
 </body>
 </html>
