--- a/html-css/module_05/index.html
+++ b/html-css/module_05/index.html
@@ -41,7 +41,7 @@
 
             <ul class="slides">
                 <li class="slides_items">
-                    <img class="slides_img" src="img/slider/1.jpg" alt="1">
+                    <img class="slides_img" src="img/slider/1.jpg" alt="1" height="600" width="100%">
                     <div class="slides_txt_wrapper">
                         <h2 class="slides_name">AFFORDABLE PARIS TOURS</h2>
                         <p class="slides_text">CITY TOURS / TOUR TICKETS / TOUR GUIDES</p>
@@ -79,7 +79,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <img class="card_img" src="img/card/1.jpg" alt="">
+                        <img class="card_img" src="img/card/1.jpg" alt="card_1" width="255" height="280">
                         <div class="card_text_wapper">
                             <p class="card_font card_name">Blue Shirt</p>
                             <p class="card_font card_cost">$26</p>
@@ -113,7 +113,7 @@
                                     </li>
                             </ul>
                         </div>
-                        <img class="card_img" src="img/card/2.jpg" alt="">
+                        <img class="card_img" src="img/card/2.jpg" alt="card_2" width="255" height="280">
                         <div class="card_text_wapper">
                             <p class="card_font card_name">Blue Shirt</p>
                             <p class="card_font card_cost">$26</p>
@@ -147,7 +147,7 @@
                                     </li>
                             </ul>
                         </div>
-                        <img class="card_img" src="img/card/3.jpg" alt="">
+                        <img class="card_img" src="img/card/3.jpg" alt="card_3" width="255" height="280">
                         <div class="card_text_wapper">
                             <p class="card_font card_name">Blue Shirt</p>
                             <p class="card_font card_cost">$26</p>
@@ -181,7 +181,7 @@
                                     </li>
                             </ul>
                         </div>
-                        <img class="card_img" src="img/card/4.jpg" alt="">
+                        <img class="card_img" src="img/card/4.jpg" alt="card_4" width="255" height="280">
                         <div class="card_text_wapper">
                             <p class="card_font card_name">Blue Shirt</p>
                             <p class="card_font card_cost">$26</p>
