--- a/html-css/module_06/index.html
+++ b/html-css/module_06/index.html
@@ -113,38 +113,108 @@
                     <article class="team_items">
                         <div class="team_modal">
                             <ul class="team_m_list">
-                                <li class="team_m_list">
-                                    <a href="#" class="team_m_link" style="font-size: 20px">
+                                <li class="team_m_item">
+                                    <button class="team_m_btn" style="font-size: 20px">
                                         <i class="fab fa-facebook-f"></i>
-                                    </a>
+                                    </button>
                                 </li>
-                                <li class="team_m_list">
-                                    <a href="#" class="team_m_link" style="font-size: 20px">
+                                <li class="team_m_item">
+                                    <button class="team_m_btn" style="font-size: 20px">
                                         <i class="fab fa-twitter"></i>
-                                    </a>
+                                    </button>
                                 </li>
-                                <li class="team_m_list">
-                                    <a href="#" class="team_m_link" style="font-size: 20px">
+                                <li class="team_m_item">
+                                    <button class="team_m_btn" style="font-size: 20px">
                                         <i class="fab fa-pinterest-p"></i>
-                                    </a>
+                                    </button>
                                 </li>
-                                <li class="team_m_list">
-                                    <a href="#" class="team_m_link" style="font-size: 20px">
+                                <li class="team_m_item">
+                                    <button class="team_m_btn" style="font-size: 20px">
                                         <i class="fab fa-instagram"></i>
-                                    </a>
+                                    </button>
                                 </li>
                             </ul>
                         </div>
-                        <img src="./img/team/1.jpg" alt="1.jpg" class="team_img">
+                        <img src="./img/team/1.jpg" alt="1.jpg" class="team_img" width="380" height="470">
                         <h4 class="team_name">Matthew dix</h4>
                         <p class="team_profession">Grafic Design</p>
+                    </article>
+                </li>
+                <li>
+                    <article class="team_items">
+                        <div class="team_modal">
+                            <ul class="team_m_list">
+                                <li class="team_m_item">
+                                    <button class="team_m_btn" style="font-size: 20px">
+                                        <i class="fab fa-facebook-f"></i>
+                                    </button>
+                                </li>
+                                <li class="team_m_item">
+                                    <button class="team_m_btn" style="font-size: 20px">
+                                        <i class="fab fa-twitter"></i>
+                                    </button>
+                                </li>
+                                <li class="team_m_item">
+                                    <button class="team_m_btn" style="font-size: 20px">
+                                        <i class="fab fa-pinterest-p"></i>
+                                    </button>
+                                </li>
+                                <li class="team_m_item">
+                                    <button class="team_m_btn" style="font-size: 20px">
+                                        <i class="fab fa-instagram"></i>
+                                    </button>
+                                </li>
+                            </ul>
+                        </div>
+                        <img src="./img/team/2.jpg" alt="2.jpg" class="team_img" width="380" height="470">
+                        <h4 class="team_name">Christopher Campbell</h4>
+                        <p class="team_profession">Branding/UX design</p>
+                    </article>
+                </li>
+                <li>
+                    <article class="team_items">
+                        <div class="team_modal">
+                            <ul class="team_m_list">
+                                <li class="team_m_item">
+                                    <button class="team_m_btn" style="font-size: 20px">
+                                        <i class="fab fa-facebook-f"></i>
+                                    </button>
+                                </li>
+                                <li class="team_m_item">
+                                    <button class="team_m_btn" style="font-size: 20px">
+                                        <i class="fab fa-twitter"></i>
+                                    </button>
+                                </li>
+                                <li class="team_m_item">
+                                    <button class="team_m_btn" style="font-size: 20px">
+                                        <i class="fab fa-pinterest-p"></i>
+                                    </button>
+                                </li>
+                                <li class="team_m_item">
+                                    <button class="team_m_btn" style="font-size: 20px">
+                                        <i class="fab fa-instagram"></i>
+                                    </button>
+                                </li>
+                            </ul>
+                        </div>
+                        <img src="./img/team/3.jpg" alt="3.jpg" class="team_img" width="380" height="470">
+                        <h4 class="team_name">Michael Fertig</h4>
+                        <p class="team_profession">Developer</p>
                     </article>
                 </li>
             </ul>
         </section>
     </main>
-    <footer class="container">
-
+    <footer>
+        <div class="footer container">
+            <p class="foot_text">© 2016 MoGo free PSD template by 
+                <a class="foot_link" href="#" target="_blank">Laaqiq</a>
+            </p>
+            <div class="subscripe_wrapper">      
+                <input type="email" placeholder="Your Email...">
+                <input type="submit" value="Subscribe">
+            </div>
+        </div> 
     </footer>
 </body>
 </html>
